--- a/requirements.txt
+++ b/requirements.txt
@@ -104,7 +104,7 @@ pystan==2.19.1.1
 # python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
 # pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1633452062248/work
 pytz-deprecation-shim==0.1.0.post0
-pywin32==303
+# pywin32==303
 pywinpty==1.1.6
 # PyYAML @ file:///D:/bld/pyyaml_1636139977724/work
 pyzmq==22.3.0
