fix: requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -147,3 +147,4 @@ wincertstore==0.2
 # xarray @ file:///home/conda/feedstock_root/build_artifacts/xarray_1639125986756/work
 yfinance==0.1.69
 # zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1641731510635/work
+tensorflow
