--- a/requirements.txt
+++ b/requirements.txt
@@ -148,3 +148,4 @@ wincertstore==0.2
 yfinance==0.1.69
 # zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1641731510635/work
 tensorflow
+fbprophet
